# mr2

./: .gitignore  README.md  pyproject.toml
registro/: __main__.py  app_principal.py  dialogos.py  gui.py  gui2.py  guia.py  main.py  mm.md  rem.py  shell.py  sm.py  test_facade.py  test_facade_2.py  tui.py
registro/abas/: aba_alunos.py  aba_consumo.py  aba_dashboard.py  aba_importacao.py  aba_reservas.py  rounded_button.py
registro/controles/: rounded_button.py  treeview_simples.py
registro/gui/: app_registro.py  constants.py  dialogo_filtro_turmas.py  dialogo_sessao.py  painel_acao_busca.py  painel_status_registrados.py  treeview_simples.py  treeview_simples0.py  treeview_simples1.py  treeview_simples2.py  utils.py
registro/importar/: __init__.py  analyzer.py  definitions.py  exceptions.py  facade.py  patterns_find.py  service.py  strategies.py
registro/nucleo/: __init__.py  crud.py  exceptions.py  facade.py  google_api.py  google_api_service.py  importers.py  importers_service.py  models.py  repository.py  service.py  service_logic.py  utils.py
registro/nucleo/untitled folder/: crud.py  facade.py  models.py  repository.py  utils.py
registro/view/: action_search_panel.py  class_filter_dialog.py  constants.py  metrics_dialog.py  metrics_panel.py  registration_app.py  session_dialog.py  simple_treeview.py  status_registered_panel.py  utils.py
