[tool.poetry]
name = "registro"
version = "0.7.1"
description = ""
authors = ["Mateus G. Pereira <mateus.pereira@ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.17.6"
gspread = "^6.1.2"
ttkbootstrap = "^1.10.1"
xlsxwriter = "^3.2.2"
fuzzywuzzy = {extras = ["python-levenshtein"], version = "^0.18.0"}
python-levenshtein = "^0.27.1"
sqlalchemy = "^2.0.40"
rich = "^14.2.0"
questionary = "^2.1.1"
pytest = "^8.4.2"
pytest-mock = "^3.15.1"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
registrar = "registro.view.gui:main"
